# agent-redteam-framework

./: .gitignore  FINDINGS.md  README.md  RUBRIC_TRACEABILITY.md  environment.yml  project.yaml  pyproject.toml  reproduce.sh  rubric_coverage.md
blog/: README.md  conference_abstract.md  discord_post.md  draft.md  linkedin_post.md  reddit_post.md  substack_intro.md
blog/images/: attack_taxonomy.mmd  controllability_matrix.mmd  defense_architecture.mmd
config/: base.yaml
data/tasks/: attack_scenarios.yaml  baseline_tasks.yaml
docs/: ADVERSARIAL_EVALUATION.md  A_PLUS_CHECKLIST.md  CLAUDE_MD.md  CONTENT_PLAN.md  DECISION_LOG.md  HYPOTHESIS_REGISTRY.md  PROJECT_BRIEF.md  PROVENANCE_SPEC.md  PUBLICATION_PIPELINE.md  attack_taxonomy.md
outputs/provenance/: config_resolved.yaml  git_info.txt  versions.txt
scripts/: check_all_gates.sh  check_integrity.py  check_phase_0.sh  check_phase_1.sh  check_phase_2.sh  check_phase_3.sh  check_phase_4.sh  check_rubric.py  generate_figures.py  make_report_figures.py  run_ablation.py  run_attacks.py  run_baselines.py  run_defenses.py  smoke_test_agents.py  sweep.sh  verify_env.sh  verify_manifests.py
src/: __init__.py  cli.py
src/agents/: base.py  crewai_target.py  langchain_target.py  tools.py
src/core/: config.py  logging.py  types.py
src/defenses/: full_defense.py  input_sanitizer.py  layered.py  llm_judge.py  tool_permission_boundary.py
tests/: conftest.py  test_basic.py  test_defenses.py  test_figures.py  test_results.py  test_scenarios.py  test_taxonomy.py
